fixed auth